--- a/contact.html
+++ b/contact.html
@@ -1,255 +1,227 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./lib/fontawesome/css/all.css" />
-    <link rel="stylesheet" href="./lib/swiper/swiper.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <title>TEIS</title>
-  </head>
-  <body>
-    <header>
-      <div class="topbar">
-        <div class="container">
-          <div class="topbar-inner">
-            <div class="topbar-contacts">
-              <a href="mailto:info@teis.com.tm"
-                ><i class="fa fa-envelope"></i> info@teis.com.tm
-              </a>
-              <a href="tel:+99365531257"
-                ><i class="fa fa-phone"></i> +993 65 531257
-              </a>
-            </div>
-            <div class="topbar-links">
-              <a href="https://instagram.com/teis_tm?igshid=YmMyMTA2M2Y="
-                ><i class="fab fa-instagram"></i
-              ></a>
-              <a
-                href="https://www.facebook.com/profile.php?id=100091004199429&mibextid=ZbWKwL"
-                ><i class="fab fa-facebook-f"></i
-              ></a>
-              <a href="#"><i class="fab fa-whatsapp"></i></a>
-              <a href="https://www.linkedin.com/company/teistm/"
-                ><i class="fab fa-linkedin"></i
-              ></a>
-            </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./lib/fontawesome/css/all.css" />
+  <link rel="stylesheet" href="./lib/swiper/swiper.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
+  <title>TEIS</title>
+</head>
+
+<body>
+  <header>
+    <div class="topbar">
+      <div class="container">
+        <div class="topbar-inner">
+          <div class="topbar-contacts">
+            <a href="mailto:info@teis.com.tm"><i class="fa fa-envelope"></i> info@teis.com.tm
+            </a>
+            <a href="tel:+99365531257"><i class="fa fa-phone"></i> +993 65 531257
+            </a>
+          </div>
+          <div class="topbar-links">
+            <a href="https://instagram.com/teis_tm?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100091004199429&mibextid=ZbWKwL"><i
+                class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://www.linkedin.com/company/teistm/"><i class="fab fa-linkedin"></i></a>
           </div>
         </div>
       </div>
-      <nav class="nav">
-        <div class="container">
-          <div class="nav-inner">
-            <a href="./index.html" class="nav-logo">
-              <img src="./img/LOGO TEIS.png" alt="" />
-            </a>
-            <ul class="nav-links">
-              <li><a href="./index.html" class="nav-link">Home</a></li>
-              <li>
-                <a href="./about-us.html" class="nav-link">About</a>
-              </li>
-              <li class="dropdown-btn">
-                <div class="nav-link">
-                  Services <i class="fa fa-chevron-down"></i>
-                </div>
-                <div class="dropdown">
-                  <a href="./services.html" class="service-link"
-                    >Maintenance of control and measuring devices</a
-                  >
-                  <a href="./service2.html" class="service-link"
-                    >Maintenance of mechanical equipment</a
-                  >
-                </div>
-              </li>
-              <li>
-                <a href="./projects.html" class="nav-link">Projects</a>
-              </li>
-              <li>
-                <a href="./contact.html" class="nav-link active">Contact</a>
-              </li>
-              <div class="lang">
-                <div class="active-lang">
-                  En <i class="fa fa-chevron-down"></i>
-                </div>
-                <div class="lang-dropdown">
-                  <a href="#">Ru</a>
-                  <a href="#">Tr</a>
-                  <a href="#">Tm</a>
-                </div>
+    </div>
+    <nav class="nav">
+      <div class="container">
+        <div class="nav-inner">
+          <a href="./index.html" class="nav-logo">
+            <img src="./img/LOGO TEIS.png" alt="" />
+          </a>
+          <ul class="nav-links">
+            <li><a href="./index.html" class="nav-link">Home</a></li>
+            <li>
+              <a href="./about-us.html" class="nav-link">About</a>
+            </li>
+            <li class="dropdown-btn">
+              <div class="nav-link">
+                Services <i class="fa fa-chevron-down"></i>
               </div>
-            </ul>
-            <div class="toggle-btn">
-              <span class="line line-1"></span>
-              <span class="line line-2"></span>
-              <span class="line line-3"></span>
+              <div class="dropdown">
+                <a href="./services.html" class="service-link">1)Maintenance of control and measuring devices</a>
+                <a href="./service2.html" class="service-link">2)Maintenance of mechanical equipment</a>
+              </div>
+            </li>
+            <li>
+              <a href="./projects.html" class="nav-link">Projects</a>
+            </li>
+            <li>
+              <a href="./contact.html" class="nav-link active">Contact</a>
+            </li>
+            <div class="lang">
+              <div class="active-lang">
+                En <i class="fa fa-chevron-down"></i>
+              </div>
+              <div class="lang-dropdown">
+                <a href="#">Ru</a>
+                <a href="#">Tr</a>
+                <a href="#">Tm</a>
+              </div>
             </div>
-            <div class="nav-burger">
-              <div class="container">
-                <div class="inner-nav-burger">
-                  <div class="nav-burger-header"></div>
-                  <div class="nav-burger-body">
-                    <div class="nav-logo">TEIS</div>
-                    <div class="nav-burger-links">
-                      <a href="./index.html" class="active">Home</a>
-                      <a href="./about-us.html" class="">About</a>
-                      <div class="nav-burger-dropdown-wrapper">
-                        <div class="nav-burger-dropdown-btn">
-                          Service <i class="fa fa-chevron-down"></i>
-                        </div>
-                        <div class="nav-burger-dropdown">
-                          <a href="./services.html" class="">1) Service 1</a>
-                          <a href="./service2.html" class="">2) Service 2</a>
-                        </div>
+          </ul>
+          <div class="toggle-btn">
+            <span class="line line-1"></span>
+            <span class="line line-2"></span>
+            <span class="line line-3"></span>
+          </div>
+          <div class="nav-burger">
+            <div class="container">
+              <div class="inner-nav-burger">
+                <div class="nav-burger-header"></div>
+                <div class="nav-burger-body">
+                  <div class="nav-logo">TEIS</div>
+                  <div class="nav-burger-links">
+                    <a href="./index.html" class="active">Home</a>
+                    <a href="./about-us.html" class="">About</a>
+                    <div class="nav-burger-dropdown-wrapper">
+                      <div class="nav-burger-dropdown-btn">
+                        Service <i class="fa fa-chevron-down"></i>
                       </div>
-                      <a href="./projects.html" class="">Projects</a>
-                      <a href="./contact.html" class="">Contact</a>
+                      <div class="nav-burger-dropdown">
+                        <a href="./services.html" class="">1) Service 1</a>
+                        <a href="./service2.html" class="">2) Service 2</a>
+                      </div>
                     </div>
-                    <div class="nav-burger-lang">
-                      <a href="#" class="active">En</a>
-                      <a href="#">Ru</a>
-                      <a href="#">Tr</a>
-                      <a href="#">Tm</a>
-                    </div>
-                    <div class="nav-burger-social">
-                      <a href="#"><i class="fab fa-instagram"></i></a>
-                      <a href="#"><i class="fab fa-facebook-f"></i></a>
-                      <a href="#"><i class="fab fa-whatsapp"></i></a>
-                      <a href="#"><i class="fab fa-linkedin"></i></a>
-                    </div>
-                    <div class="nav-burger-contact">
-                      <a href="mailto:info@teis.com.tm"
-                        ><i class="fa fa-envelope"></i> info@teis.com.tm
-                      </a>
-                      <a href="tel:+99365531257"
-                        ><i class="fa fa-phone"></i> +993 65 531257
-                      </a>
-                    </div>
+                    <a href="./projects.html" class="">Projects</a>
+                    <a href="./contact.html" class="">Contact</a>
+                  </div>
+                  <div class="nav-burger-lang">
+                    <a href="#" class="active">En</a>
+                    <a href="#">Ru</a>
+                    <a href="#">Tr</a>
+                    <a href="#">Tm</a>
+                  </div>
+                  <div class="nav-burger-social">
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-whatsapp"></i></a>
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                  </div>
+                  <div class="nav-burger-contact">
+                    <a href="mailto:info@teis.com.tm"><i class="fa fa-envelope"></i> info@teis.com.tm
+                    </a>
+                    <a href="tel:+99365531257"><i class="fa fa-phone"></i> +993 65 531257
+                    </a>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </nav>
-    </header>
-    <main>
-      <section class="breadcrumb">
-        <div class="breadcrumb-img">
-          <img src="./img/Banner.png" alt="" />
-        </div>
-        <div class="breadcrumb-inner">
-          <div class="container">
-            <h2>Contact</h2>
-            <div class="breadcrumb-links">
-              <a href="./index.html">Home</a>
-              /
-              <p>Contact</p>
-            </div>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section class="breadcrumb">
+      <div class="breadcrumb-img">
+        <img src="./img/Banner.png" alt="" />
+      </div>
+      <div class="breadcrumb-inner">
+        <div class="container">
+          <h2>Contact</h2>
+          <div class="breadcrumb-links">
+            <a href="./index.html">Home</a>
+            /
+            <p>Contact</p>
           </div>
         </div>
-      </section>
-      <section class="contact">
-        <div class="container">
-          <div class="contact-inner">
-            <div class="contact-img">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1573.325879040182!2d58.36281480414894!3d37.93856521037841!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3f700183200ea669%3A0x5f912011e0ae7fb5!2sKervan%20Logistics!5e0!3m2!1sru!2s!4v1678709433095!5m2!1sru!2s"
-                width="600"
-                height="450"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
-            </div>
-            <form action="" class="contact-form">
-              <span>Contact Us</span>
-              <!-- <h2>Lorem ipsum dolor sit.</h2>
+      </div>
+    </section>
+    <section class="contact">
+      <div class="container">
+        <div class="contact-inner">
+          <div class="contact-img">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1573.325879040182!2d58.36281480414894!3d37.93856521037841!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3f700183200ea669%3A0x5f912011e0ae7fb5!2sKervan%20Logistics!5e0!3m2!1sru!2s!4v1678709433095!5m2!1sru!2s"
+              width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+          <form action="" class="contact-form">
+            <span>Contact Us</span>
+            <!-- <h2>Lorem ipsum dolor sit.</h2>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Deserunt dolorem eveniet vitae, officia qui architecto aut illum
                 eligendi cupiditate vel.
               </p> -->
-              <input type="text" placeholder="Your name" />
-              <input type="email" placeholder="Your email" />
-              <textarea
-                name=""
-                id=""
-                cols="30"
-                rows="10"
-                placeholder="Your message"
-              ></textarea>
-              <button>Submit</button>
-            </form>
-          </div>
-        </div>
-      </section>
-    </main>
-    <footer class="footer">
-      <div class="container">
-        <div class="footer-inner">
-          <div class="footer-about-us">
-            <div class="footer-logo">
-              <h1>TEIS</h1>
-            </div>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque
-              eos nesciunt vitae sequi aperiam veniam?
-            </p>
-            <div class="social-links">
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-whatsapp"></i></a>
-              <a href="#"><i class="fab fa-linkedin"></i></a>
-            </div>
-          </div>
-          <ul class="footer-links">
-            <h3>Quick Links</h3>
-            <li>
-              <a class="" href="./index.html"
-                ><i class="fa fa-chevron-right"></i> Home</a
-              >
-            </li>
-            <li>
-              <a class="" href="./about-us.html"
-                ><i class="fa fa-chevron-right"></i>About</a
-              >
-            </li>
-            <li>
-              <a class="" href="./services.html"
-                ><i class="fa fa-chevron-right"></i>Services</a
-              >
-            </li>
-            <li>
-              <a class="" href="./projects.html"
-                ><i class="fa fa-chevron-right"></i>Projects</a
-              >
-            </li>
-            <li>
-              <a class="active" href="./contact.html"
-                ><i class="fa fa-chevron-right"></i>Contact</a
-              >
-            </li>
-          </ul>
-          <ul class="footer-address">
-            <h3>Address</h3>
-            <li>
-              <a href="#"
-                ><i class="fa fa-map-marker-alt"></i> 123 Street, Ashgabat</a
-              >
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-phone"></i> +993 65 656565</a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-envelope"></i> info@teis.com.tm</a>
-            </li>
-          </ul>
+            <input type="text" placeholder="Your name" />
+            <input type="email" placeholder="Your email" />
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your message"></textarea>
+            <button>Submit</button>
+          </form>
         </div>
       </div>
-    </footer>
-    <script src="./lib/swiper/swiper.js"></script>
-    <script src="./js/main.js"></script>
-  </body>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-inner">
+        <div class="footer-about-us">
+          <div class="footer-logo">
+            <h1>TEIS</h1>
+          </div>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque
+            eos nesciunt vitae sequi aperiam veniam?
+          </p>
+          <div class="social-links">
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-whatsapp"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+          </div>
+        </div>
+        <ul class="footer-links">
+          <h3>Quick Links</h3>
+          <li>
+            <a class="" href="./index.html"><i class="fa fa-chevron-right"></i> Home</a>
+          </li>
+          <li>
+            <a class="" href="./about-us.html"><i class="fa fa-chevron-right"></i>About</a>
+          </li>
+          <li class="footer-modal-wrapper">
+            <a class=" footer-modal-btn"><i class="fa fa-chevron-right"></i>Services</a>
+            <div class="footer-modal">
+              <a href="./services.html">
+                1) Maintenance of control and measuring devices
+              </a>
+              <a href="./service2.html">2) Maintenance of mechanical equipment</a>
+            </div>
+          </li>
+          <li>
+            <a class="" href="./projects.html"><i class="fa fa-chevron-right"></i>Projects</a>
+          </li>
+          <li>
+            <a class="active" href="./contact.html"><i class="fa fa-chevron-right"></i>Contact</a>
+          </li>
+        </ul>
+        <ul class="footer-address">
+          <h3>Address</h3>
+          <li>
+            <a href="#"><i class="fa fa-map-marker-alt"></i> 123 Street, Ashgabat</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-phone"></i> +993 65 656565</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-envelope"></i> info@teis.com.tm</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+  <script src="./lib/swiper/swiper.js"></script>
+  <script src="./js/main.js"></script>
+</body>
+
 </html>
