--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 Services <i class="fa fa-chevron-down"></i>
               </div>
               <div class="dropdown">
-                <a href="./services.html" class="service-link">Maintenance of control and measuring devices</a>
-                <a href="./service2.html" class="service-link">Maintenance of mechanical equipment</a>
+                <a href="./services.html" class="service-link">1)Maintenance of control and measuring devices</a>
+                <a href="./service2.html" class="service-link">2)Maintenance of mechanical equipment</a>
               </div>
             </li>
             <li><a href="./projects.html" class="nav-link">Projects</a></li>
@@ -426,8 +426,14 @@
           <li>
             <a class="" href="./about-us.html"><i class="fa fa-chevron-right"></i>About</a>
           </li>
-          <li>
-            <a class="" href="./services.html"><i class="fa fa-chevron-right"></i>Services</a>
+          <li class="footer-modal-wrapper">
+            <a class=" footer-modal-btn"><i class="fa fa-chevron-right"></i>Services</a>
+            <div class="footer-modal">
+              <a href="./services.html">
+                1) Maintenance of control and measuring devices
+              </a>
+              <a href="./service2.html">2) Maintenance of mechanical equipment</a>
+            </div>
           </li>
           <li>
             <a class="" href="./projects.html"><i class="fa fa-chevron-right"></i>Projects</a>
