--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
                 <div class="container">
                   <div class="swiper-slide-wrapper-inner">
                     <div class="swiper-slide-text">
-                      <h2>Lorem ipsum dolor sit.</h2>
-                      <p>
+                      <h2>СРЕДСТВ ИЗМЕРЕНИЙ ДАВЛЕНИЯ</h2>
+                      <!-- <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing
                         elit. Eligendi, pariatur non! Laudantium quidem id
                         perferendis?
-                      </p>
-                      <a href="#" class="link-btn">Read More</a>
+                      </p> -->
+                      <a href="./services.html#s1" class="link-btn">Read More</a>
                     </div>
                   </div>
                 </div>
@@ -150,13 +150,13 @@
                 <div class="container">
                   <div class="swiper-slide-wrapper-inner">
                     <div class="swiper-slide-text">
-                      <h2>Lorem ipsum dolor sit.</h2>
-                      <p>
+                      <h2>СРЕДСТВ ИЗМЕРЕНИЙ ТЕПЛОФИЗИЧЕСКИХ И ТЕМПЕРАТУРНЫХ ВЕЛИЧИН</h2>
+                      <!-- <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing
                         elit. Eligendi, pariatur non! Laudantium quidem id
                         perferendis?
-                      </p>
-                      <a href="#" class="link-btn">Read More</a>
+                      </p> -->
+                      <a href="./services.html#s2" class="link-btn">Read More</a>
                     </div>
                   </div>
                 </div>
@@ -172,13 +172,13 @@
                 <div class="container">
                   <div class="swiper-slide-wrapper-inner">
                     <div class="swiper-slide-text">
-                      <h2>Lorem ipsum dolor sit.</h2>
-                      <p>
+                      <h2>СРЕДСТВ ИЗМЕРЕНИЙ ФИЗИКО-ХИМИЧЕСКОГО СОСТАВА И СВОЙСТВ ВЕЩЕСТВ</h2>
+                      <!-- <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing
                         elit. Eligendi, pariatur non! Laudantium quidem id
                         perferendis?
-                      </p>
-                      <a href="#" class="link-btn">Read More</a>
+                      </p> -->
+                      <a href="./services.html#s3" class="link-btn">Read More</a>
                     </div>
                   </div>
                 </div>
@@ -188,19 +188,41 @@
           <div class="swiper-slide slide4">
             <div class="swiper-slide-body">
               <div class="swiper-slide-img">
+                <img src="./img/4. СРЕДСТВ ИЗМЕРЕНИЙ ОБЪЕМА ВЕЩЕСТВ.png" alt="img #3" />
+              </div>
+              <div class="swiper-slide-wrapper">
+                <div class="container">
+                  <div class="swiper-slide-wrapper-inner">
+                    <div class="swiper-slide-text">
+                      <h2>СЕРВИСНОЕ ОБСЛУЖИВАНИЕ СРЕДСТВ ИЗМЕРЕНИЙ ОБЪЕМА ВЕЩЕСТВ</h2>
+                      <!-- <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Eligendi, pariatur non! Laudantium quidem id
+                        perferendis?
+                      </p> -->
+                      <a href="./services.html#s4" class="link-btn">Read More</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide slide5">
+            <div class="swiper-slide-body">
+              <div class="swiper-slide-img">
                 <img src="./img/Banner 4.png" alt="img #3" />
               </div>
               <div class="swiper-slide-wrapper">
                 <div class="container">
                   <div class="swiper-slide-wrapper-inner">
                     <div class="swiper-slide-text">
-                      <h2>Lorem ipsum dolor sit.</h2>
-                      <p>
+                      <h2>ПОВЕРКА И РЕМОНТ СРЕДСТВ ИЗМЕРЕНИЙ ДАВЛЕНИЯ</h2>
+                      <!-- <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing
                         elit. Eligendi, pariatur non! Laudantium quidem id
                         perferendis?
-                      </p>
-                      <a href="#" class="link-btn">Read More</a>
+                      </p> -->
+                      <a href="./service2.html#s5" class="link-btn">Read More</a>
                     </div>
                   </div>
                 </div>
@@ -445,7 +467,8 @@
         <ul class="footer-address">
           <h3>Address</h3>
           <li>
-            <a href="#"><i class="fa fa-map-marker-alt"></i> 123 Street, Ashgabat</a>
+            <a href="#"><i class="fa fa-map-marker-alt"></i> Туркменистан, г. Ашхабад, этрап Багтыярлык, проспект им.
+              Героя Туркменистана Атамурада Ниязова, дом 190, блок «В»</a>
           </li>
           <li>
             <a href="#"><i class="fa fa-phone"></i> +993 65 656565</a>
