--- a/service2.html
+++ b/service2.html
@@ -135,7 +135,7 @@
         </div>
       </div>
     </section>
-    <section class="services-page">
+    <section id="s5" class="services-page">
       <div class="container">
         <div class="services-page-inner">
           <div class="services-page-img">
@@ -215,7 +215,8 @@
         <ul class="footer-address">
           <h3>Address</h3>
           <li>
-            <a href="#"><i class="fa fa-map-marker-alt"></i> 123 Street, Ashgabat</a>
+            <a href="#"><i class="fa fa-map-marker-alt"></i> Туркменистан, г. Ашхабад, этрап Багтыярлык, проспект им.
+              Героя Туркменистана Атамурада Ниязова, дом 190, блок «В»</a>
           </li>
           <li>
             <a href="#"><i class="fa fa-phone"></i> +993 65 656565</a>
