--- a/services.html
+++ b/services.html
@@ -135,7 +135,7 @@
         </div>
       </div>
     </section>
-    <section class="services-page">
+    <section id="s1" class="services-page">
       <div class="container">
         <div class="services-page-inner">
           <div class="services-page-img">
@@ -206,7 +206,7 @@
         </div>
       </div>
     </section>
-    <section class="services-page">
+    <section id="s2" class="services-page">
       <div class="container">
         <div class="services-page-inner">
           <div class="services-page-info">
@@ -265,7 +265,7 @@
         </div>
       </div>
     </section>
-    <section class="services-page">
+    <section id="s3" class="services-page">
       <div class="container">
         <div class="services-page-inner">
           <div class="services-page-img">
@@ -303,12 +303,14 @@
               <ul class="service-tab-modal">
                 <div class="exit"><i class="fa fa-x"></i></div>
                 <h4>Измерители параметров окружающей среды</h4>
+                <li>0...100%</li>
               </ul>
             </div>
             <div class="service-tab-modal-wrapper">
               <ul class="service-tab-modal">
                 <div class="exit"><i class="fa fa-x"></i></div>
                 <h4>Анализаторы газа</h4>
+                <li>0...100%</li>
               </ul>
             </div>
             <div class="service-tab-modal-wrapper">
@@ -336,7 +338,7 @@
         </div>
       </div>
     </section>
-    <section class="services-page">
+    <section id="s4" class="services-page">
       <div class="container">
         <div class="services-page-inner">
           <div class="services-page-info">
@@ -424,7 +426,8 @@
         <ul class="footer-address">
           <h3>Address</h3>
           <li>
-            <a href="#"><i class="fa fa-map-marker-alt"></i> 123 Street, Ashgabat</a>
+            <a href="#"><i class="fa fa-map-marker-alt"></i> Туркменистан, г. Ашхабад, этрап Багтыярлык, проспект им.
+              Героя Туркменистана Атамурада Ниязова, дом 190, блок «В»</a>
           </li>
           <li>
             <a href="#"><i class="fa fa-phone"></i> +993 65 656565</a>
