--- a/projects.html
+++ b/projects.html
@@ -271,7 +271,8 @@
         <ul class="footer-address">
           <h3>Address</h3>
           <li>
-            <a href="#"><i class="fa fa-map-marker-alt"></i> 123 Street, Ashgabat</a>
+            <a href="#"><i class="fa fa-map-marker-alt"></i> Туркменистан, г. Ашхабад, этрап Багтыярлык, проспект им.
+              Героя Туркменистана Атамурада Ниязова, дом 190, блок «В»</a>
           </li>
           <li>
             <a href="#"><i class="fa fa-phone"></i> +993 65 656565</a>
