--- a/services.html
+++ b/services.html
@@ -77,14 +77,14 @@
                 <div class="nav-burger-body">
                   <div class="nav-logo">TEIS</div>
                   <div class="nav-burger-links">
-                    <a href="./index.html" class="active">Home</a>
+                    <a href="./index.html" class="">Home</a>
                     <a href="./about-us.html" class="">About</a>
                     <div class="nav-burger-dropdown-wrapper">
                       <div class="nav-burger-dropdown-btn">
                         Service <i class="fa fa-chevron-down"></i>
                       </div>
                       <div class="nav-burger-dropdown">
-                        <a href="./services.html" class="">1) Service 1</a>
+                        <a href="./services.html" class="active">1) Service 1</a>
                         <a href="./service2.html" class="">2) Service 2</a>
                       </div>
                     </div>
@@ -98,10 +98,11 @@
                     <a href="#">Tm</a>
                   </div>
                   <div class="nav-burger-social">
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://instagram.com/teis_tm?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100091004199429&mibextid=ZbWKwL"><i
+                        class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-whatsapp"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/company/teistm/"><i class="fab fa-linkedin"></i></a>
                   </div>
                   <div class="nav-burger-contact">
                     <a href="mailto:info@teis.com.tm"><i class="fa fa-envelope"></i> info@teis.com.tm
@@ -393,10 +394,11 @@
             eos nesciunt vitae sequi aperiam veniam?
           </p>
           <div class="social-links">
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://instagram.com/teis_tm?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100091004199429&mibextid=ZbWKwL"><i
+                class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-whatsapp"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/company/teistm/"><i class="fab fa-linkedin"></i></a>
           </div>
         </div>
         <ul class="footer-links">
@@ -430,10 +432,12 @@
               Героя Туркменистана Атамурада Ниязова, дом 190, блок «В»</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-phone"></i> +993 65 656565</a>
+            <a href="tel:+99365531257"><i class="fa fa-phone"></i> +993 65 531257
+            </a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-envelope"></i> info@teis.com.tm</a>
+            <a href="mailto:info@teis.com.tm"><i class="fa fa-envelope"></i> info@teis.com.tm
+            </a>
           </li>
         </ul>
       </div>
