--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
                 <div class="nav-burger-body">
                   <div class="nav-logo">TEIS</div>
                   <div class="nav-burger-links">
-                    <a href="./index.html" class="active">Home</a>
+                    <a href="./index.html" class="">Home</a>
                     <a href="./about-us.html" class="">About</a>
                     <div class="nav-burger-dropdown-wrapper">
                       <div class="nav-burger-dropdown-btn">
@@ -93,7 +93,7 @@
                       </div>
                     </div>
                     <a href="./projects.html" class="">Projects</a>
-                    <a href="./contact.html" class="">Contact</a>
+                    <a href="./contact.html" class="active">Contact</a>
                   </div>
                   <div class="nav-burger-lang">
                     <a href="#" class="active">En</a>
@@ -102,10 +102,11 @@
                     <a href="#">Tm</a>
                   </div>
                   <div class="nav-burger-social">
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://instagram.com/teis_tm?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100091004199429&mibextid=ZbWKwL"><i
+                        class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-whatsapp"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/company/teistm/"><i class="fab fa-linkedin"></i></a>
                   </div>
                   <div class="nav-burger-contact">
                     <a href="mailto:info@teis.com.tm"><i class="fa fa-envelope"></i> info@teis.com.tm
@@ -175,10 +176,11 @@
             eos nesciunt vitae sequi aperiam veniam?
           </p>
           <div class="social-links">
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://instagram.com/teis_tm?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100091004199429&mibextid=ZbWKwL"><i
+                class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-whatsapp"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/company/teistm/"><i class="fab fa-linkedin"></i></a>
           </div>
         </div>
         <ul class="footer-links">
@@ -212,10 +214,12 @@
               Героя Туркменистана Атамурада Ниязова, дом 190, блок «В»</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-phone"></i> +993 65 656565</a>
+            <a href="tel:+99365531257"><i class="fa fa-phone"></i> +993 65 531257
+            </a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-envelope"></i> info@teis.com.tm</a>
+            <a href="mailto:info@teis.com.tm"><i class="fa fa-envelope"></i> info@teis.com.tm
+            </a>
           </li>
         </ul>
       </div>
