--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./lib/fontawesome/css/all.css" />
   <link rel="stylesheet" href="./lib/swiper/swiper.css" />
   <link rel="stylesheet" href="./styles/style.css" />
-  <title>TEISS</title>
+  <title>TEIS</title>
 </head>
 
 <body>
@@ -96,10 +96,11 @@
                     <a href="#">Tm</a>
                   </div>
                   <div class="nav-burger-social">
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://instagram.com/teis_tm?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100091004199429&mibextid=ZbWKwL"><i
+                        class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-whatsapp"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/company/teistm/"><i class="fab fa-linkedin"></i></a>
                   </div>
                   <div class="nav-burger-contact">
                     <a href="mailto:info@teis.com.tm"><i class="fa fa-envelope"></i> info@teis.com.tm
@@ -443,10 +444,11 @@
             and Supplementation at Its Best
           </p>
           <div class="social-links">
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://instagram.com/teis_tm?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100091004199429&mibextid=ZbWKwL"><i
+                class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-whatsapp"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/company/teistm/"><i class="fab fa-linkedin"></i></a>
           </div>
         </div>
         <ul class="footer-links">
@@ -481,10 +483,12 @@
               Ниязова, дом 190, блок «В»</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-phone"></i> +993 65 656565</a>
+            <a href="tel:+99365531257"><i class="fa fa-phone"></i> +993 65 531257
+            </a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-envelope"></i> info@teis.com.tm</a>
+            <a href="mailto:info@teis.com.tm"><i class="fa fa-envelope"></i> info@teis.com.tm
+            </a>
           </li>
         </ul>
       </div>
